[package]
name = "orion-db"
version = "0.1.0"
edition = "2024"
license = "MIT"
description = "Shared SurrealDB infrastructure for Orion apps (Tauri v2 + Rust)"

[features]
specta = ["dep:specta"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
thiserror = "2"
tracing = "0.1"
tokio = { version = "1", features = ["full"] }
surrealdb = { version = "2", features = ["kv-mem", "kv-surrealkv"] }
specta = { version = "=2.0.0-rc.22", features = ["derive", "serde_json"], optional = true }
